package org.checkoutService.constants;

public enum PaymentGatewayTypes {
    RAZORPAY,
    PAYU,
    RAKUTENPAY,
    LINEPAY;
}
